<resources>
    <string name="app_name">Tubes 2</string>

    <string name="theme">Choose Theme :</string>
    <string name="kategori1">PEOPLE</string>
    <string name="kategori2">PLANETS</string>
    <string name="kategori3">STARSHIPS</string>

    <string name="contoh1">e.g Darth Vader</string>
    <string name="contoh2">e.g Death Star</string>
    <string name="contoh3">e.g Millenium Falcon</string>

    <string name="Question">Question :</string>
    <string name="left">Tilt Left</string>
    <string name="option_false">FALSE</string>
    <string name="right">Tilt Right</string>
    <string name="option_true">TRUE</string>

    <string name="score">Score :</string>
    <string name="thankyou">Thanks for Playing!</string>
    <string name="playAgain">Play Again?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
