<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3"
    android:padding="16dp"
    android:id="@+id/fragmentHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:weightSum="3"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:text="@string/kategori1"
                android:textColor="@color/yellow"
                android:textSize="33sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contoh1"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/darthvader"
            android:background="@drawable/gradial"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:weightSum="3"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:text="@string/kategori2"
                android:textColor="@color/yellow"
                android:textSize="33sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contoh3"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/deathstar"
            android:background="@drawable/gradial"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginBottom="50dp"
        android:weightSum="3"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_black"
                android:text="@string/kategori3"
                android:textColor="@color/yellow"
                android:textSize="33sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contoh3"
                android:textColor="@color/white"
                />
        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/millenium"
            android:background="@drawable/gradial"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>
